#
# Copyright 2017 The Turbo Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load(
    "//turbo:copts/configure_copts.bzl",
    "TURBO_DEFAULT_COPTS",
    "TURBO_DEFAULT_LINKOPTS",
    "TURBO_TEST_COPTS",
)

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

cc_library(
    name = "any",
    hdrs = ["any.h"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    deps = [
        ":bad_any_cast",
        "//turbo/base:config",
        "//turbo/base:core_headers",
        "//turbo/base:fast_type_id",
        "//turbo/meta:type_traits",
        "//turbo/utility",
    ],
)

cc_library(
    name = "bad_any_cast",
    hdrs = ["bad_any_cast.h"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    deps = [
        ":bad_any_cast_impl",
        "//turbo/base:config",
    ],
)

cc_library(
    name = "bad_any_cast_impl",
    srcs = [
        "bad_any_cast.cc",
        "bad_any_cast.h",
    ],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    visibility = ["//visibility:private"],
    deps = [
        "//turbo/base:config",
        "//turbo/base:raw_logging_internal",
    ],
)

cc_test(
    name = "any_test",
    size = "small",
    srcs = [
        "any_test.cc",
    ],
    copts = TURBO_TEST_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    deps = [
        ":any",
        "//turbo/base:config",
        "//turbo/base:exception_testing",
        "//turbo/base:raw_logging_internal",
        "//turbo/container:test_instance_tracker",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "any_exception_safety_test",
    srcs = ["any_exception_safety_test.cc"],
    copts = TURBO_TEST_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    deps = [
        ":any",
        "//turbo/base:config",
        "//turbo/base:exception_safety_testing",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "span",
    srcs = [
        "internal/span.h",
    ],
    hdrs = [
        "span.h",
    ],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    deps = [
        "//turbo/algorithm",
        "//turbo/base:core_headers",
        "//turbo/base:throw_delegate",
        "//turbo/meta:type_traits",
    ],
)

cc_test(
    name = "span_test",
    size = "small",
    srcs = ["span_test.cc"],
    copts = TURBO_TEST_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    deps = [
        ":span",
        "//turbo/base:config",
        "//turbo/base:core_headers",
        "//turbo/base:exception_testing",
        "//turbo/container:fixed_array",
        "//turbo/container:inlined_vector",
        "//turbo/hash:hash_testing",
        "//turbo/strings",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "optional",
    srcs = ["internal/optional.h"],
    hdrs = ["optional.h"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    deps = [
        ":bad_optional_access",
        "//turbo/base:base_internal",
        "//turbo/base:config",
        "//turbo/base:core_headers",
        "//turbo/memory",
        "//turbo/meta:type_traits",
        "//turbo/utility",
    ],
)

cc_library(
    name = "bad_optional_access",
    srcs = ["bad_optional_access.cc"],
    hdrs = ["bad_optional_access.h"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    deps = [
        "//turbo/base:config",
        "//turbo/base:raw_logging_internal",
    ],
)

cc_library(
    name = "bad_variant_access",
    srcs = ["bad_variant_access.cc"],
    hdrs = ["bad_variant_access.h"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    deps = [
        "//turbo/base:config",
        "//turbo/base:raw_logging_internal",
    ],
)

cc_test(
    name = "optional_test",
    size = "small",
    srcs = [
        "optional_test.cc",
    ],
    copts = TURBO_TEST_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    deps = [
        ":optional",
        "//turbo/base:config",
        "//turbo/base:raw_logging_internal",
        "//turbo/meta:type_traits",
        "//turbo/strings",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "optional_exception_safety_test",
    srcs = [
        "optional_exception_safety_test.cc",
    ],
    copts = TURBO_TEST_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    deps = [
        ":optional",
        "//turbo/base:config",
        "//turbo/base:exception_safety_testing",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "conformance_testing",
    testonly = 1,
    hdrs = [
        "internal/conformance_aliases.h",
        "internal/conformance_archetype.h",
        "internal/conformance_profile.h",
        "internal/conformance_testing.h",
        "internal/conformance_testing_helpers.h",
        "internal/parentheses.h",
        "internal/transform_args.h",
    ],
    copts = TURBO_TEST_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    deps = [
        "//turbo/algorithm:container",
        "//turbo/meta:type_traits",
        "//turbo/strings",
        "//turbo/utility",
        "@com_google_googletest//:gtest",
    ],
)

cc_test(
    name = "conformance_testing_test",
    size = "small",
    srcs = [
        "internal/conformance_testing_test.cc",
    ],
    copts = TURBO_TEST_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    deps = [
        ":conformance_testing",
        "//turbo/meta:type_traits",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "variant",
    srcs = ["internal/variant.h"],
    hdrs = ["variant.h"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    deps = [
        ":bad_variant_access",
        "//turbo/base:base_internal",
        "//turbo/base:config",
        "//turbo/base:core_headers",
        "//turbo/meta:type_traits",
        "//turbo/utility",
    ],
)

cc_test(
    name = "variant_test",
    size = "small",
    srcs = ["variant_test.cc"],
    copts = TURBO_TEST_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    deps = [
        ":variant",
        "//turbo/base:config",
        "//turbo/base:core_headers",
        "//turbo/memory",
        "//turbo/meta:type_traits",
        "//turbo/strings",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "variant_benchmark",
    srcs = [
        "variant_benchmark.cc",
    ],
    copts = TURBO_TEST_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    tags = ["benchmark"],
    deps = [
        ":variant",
        "//turbo/utility",
        "@com_github_google_benchmark//:benchmark_main",
    ],
)

cc_test(
    name = "variant_exception_safety_test",
    size = "small",
    srcs = [
        "variant_exception_safety_test.cc",
    ],
    copts = TURBO_TEST_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    deps = [
        ":variant",
        "//turbo/base:config",
        "//turbo/base:exception_safety_testing",
        "//turbo/memory",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "compare",
    hdrs = ["compare.h"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    deps = [
        "//turbo/base:core_headers",
        "//turbo/meta:type_traits",
    ],
)

cc_test(
    name = "compare_test",
    size = "small",
    srcs = [
        "compare_test.cc",
    ],
    copts = TURBO_TEST_COPTS,
    deps = [
        ":compare",
        "//turbo/base",
        "@com_google_googletest//:gtest_main",
    ],
)
