#
# Copyright 2022 The Turbo Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

load(
    "//turbo:copts/configure_copts.bzl",
    "TURBO_DEFAULT_COPTS",
    "TURBO_DEFAULT_LINKOPTS",
    "TURBO_TEST_COPTS",
)

package(default_visibility = [
    "//turbo/log:__pkg__",
])

licenses(["notice"])

cc_library(
    name = "check_impl",
    hdrs = ["check_impl.h"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    deps = [
        ":check_op",
        ":conditions",
        ":log_message",
        ":strip",
        "//turbo/base:core_headers",
    ],
)

cc_library(
    name = "check_op",
    srcs = ["check_op.cc"],
    hdrs = ["check_op.h"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    visibility = [
        "//turbo/log:__pkg__",
    ],
    deps = [
        ":nullguard",
        ":nullstream",
        ":strip",
        "//turbo/base:config",
        "//turbo/base:core_headers",
        "//turbo/strings",
    ],
)

cc_library(
    name = "conditions",
    srcs = ["conditions.cc"],
    hdrs = ["conditions.h"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    deps = [
        ":voidify",
        "//turbo/base",
        "//turbo/base:config",
        "//turbo/base:core_headers",
    ],
)

cc_library(
    name = "config",
    hdrs = ["config.h"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    visibility = [
        "//turbo/log:__pkg__",
    ],
    deps = [
        "//turbo/base:config",
        "//turbo/base:core_headers",
    ],
)

cc_library(
    name = "flags",
    hdrs = ["flags.h"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    deps = [
        "//turbo/flags:flag",
    ],
)

cc_library(
    name = "format",
    srcs = ["log_format.cc"],
    hdrs = ["log_format.h"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    deps = [
        ":append_truncated",
        ":config",
        ":globals",
        "//turbo/base:config",
        "//turbo/base:core_headers",
        "//turbo/base:log_severity",
        "//turbo/strings",
        "//turbo/strings:str_format",
        "//turbo/time",
        "//turbo/types:span",
    ],
)

cc_library(
    name = "globals",
    srcs = ["globals.cc"],
    hdrs = ["globals.h"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    visibility = [
        "//turbo/log:__pkg__",
    ],
    deps = [
        "//turbo/base:config",
        "//turbo/base:core_headers",
        "//turbo/base:log_severity",
        "//turbo/base:raw_logging_internal",
        "//turbo/strings",
        "//turbo/time",
    ],
)

cc_library(
    name = "log_impl",
    hdrs = ["log_impl.h"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    deps = [
        ":conditions",
        ":log_message",
        ":strip",
    ],
)

cc_library(
    name = "log_message",
    srcs = ["log_message.cc"],
    hdrs = ["log_message.h"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    visibility = [
        "//turbo/log:__pkg__",
    ],
    deps = [
        ":append_truncated",
        ":format",
        ":globals",
        ":log_sink_set",
        ":nullguard",
        ":proto",
        "//turbo/base",
        "//turbo/base:config",
        "//turbo/base:core_headers",
        "//turbo/base:errno_saver",
        "//turbo/base:log_severity",
        "//turbo/base:raw_logging_internal",
        "//turbo/base:strerror",
        "//turbo/container:inlined_vector",
        "//turbo/debugging:examine_stack",
        "//turbo/log:globals",
        "//turbo/log:log_entry",
        "//turbo/log:log_sink",
        "//turbo/log:log_sink_registry",
        "//turbo/memory",
        "//turbo/strings",
        "//turbo/time",
        "//turbo/types:span",
    ],
)

cc_library(
    name = "append_truncated",
    hdrs = ["append_truncated.h"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    deps = [
        "//turbo/base:config",
        "//turbo/strings",
        "//turbo/types:span",
    ],
)

cc_library(
    name = "log_sink_set",
    srcs = ["log_sink_set.cc"],
    hdrs = ["log_sink_set.h"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS + select({
        "//conditions:default": [],
        "@platforms//os:android": ["-llog"],
    }),
    deps = [
        ":config",
        ":globals",
        "//turbo/base",
        "//turbo/base:config",
        "//turbo/base:core_headers",
        "//turbo/base:log_severity",
        "//turbo/base:raw_logging_internal",
        "//turbo/cleanup",
        "//turbo/log:globals",
        "//turbo/log:log_entry",
        "//turbo/log:log_sink",
        "//turbo/strings",
        "//turbo/synchronization",
        "//turbo/types:span",
    ],
)

cc_library(
    name = "nullguard",
    srcs = ["nullguard.cc"],
    hdrs = ["nullguard.h"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    deps = [
        "//turbo/base:config",
        "//turbo/base:core_headers",
    ],
)

cc_library(
    name = "nullstream",
    hdrs = ["nullstream.h"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    deps = [
        "//turbo/base:config",
        "//turbo/base:core_headers",
        "//turbo/base:log_severity",
        "//turbo/strings",
    ],
)

cc_library(
    name = "strip",
    hdrs = ["strip.h"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    deps = [
        ":log_message",
        ":nullstream",
        "//turbo/base:log_severity",
    ],
)

cc_library(
    name = "structured",
    hdrs = ["structured.h"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    deps = [
        ":log_message",
        "//turbo/base:config",
        "//turbo/strings",
    ],
)

cc_library(
    name = "test_actions",
    testonly = True,
    srcs = ["test_actions.cc"],
    hdrs = ["test_actions.h"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    deps = [
        "//turbo/base:config",
        "//turbo/base:core_headers",
        "//turbo/base:log_severity",
        "//turbo/log:log_entry",
        "//turbo/strings",
        "//turbo/time",
    ] + select({
        "//turbo:msvc_compiler": [],
        "//conditions:default": [
        ],
    }),
)

cc_library(
    name = "test_helpers",
    testonly = True,
    srcs = ["test_helpers.cc"],
    hdrs = ["test_helpers.h"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    deps = [
        ":globals",
        "//turbo/base:config",
        "//turbo/base:log_severity",
        "//turbo/log:globals",
        "//turbo/log:initialize",
        "@com_google_googletest//:gtest",
    ],
)

cc_library(
    name = "test_matchers",
    testonly = True,
    srcs = ["test_matchers.cc"],
    hdrs = ["test_matchers.h"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    deps = [
        ":test_helpers",
        "@com_google_googletest//:gtest",
        "//turbo/base:config",
        "//turbo/base:core_headers",
        "//turbo/base:log_severity",
        "//turbo/log:log_entry",
        "//turbo/strings",
        "//turbo/time",
    ] + select({
        "//turbo:msvc_compiler": [],
        "//conditions:default": [
        ],
    }),
)

cc_library(
    name = "voidify",
    hdrs = ["voidify.h"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    deps = ["//turbo/base:config"],
)

cc_library(
    name = "proto",
    srcs = ["proto.cc"],
    hdrs = ["proto.h"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    deps = [
        "//turbo/base",
        "//turbo/base:config",
        "//turbo/base:core_headers",
        "//turbo/strings",
        "//turbo/types:span",
    ],
)

# Test targets
cc_test(
    name = "stderr_log_sink_test",
    size = "small",
    srcs = ["stderr_log_sink_test.cc"],
    copts = TURBO_TEST_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    tags = [
        "no_test:os:android",
        "no_test:os:ios",
        "no_test_android",
        "no_test_darwin_x86_64",
        "no_test_ios",
        "no_test_wasm",
    ],
    deps = [
        ":test_helpers",
        "//turbo/base:core_headers",
        "//turbo/base:log_severity",
        "//turbo/log",
        "//turbo/log:globals",
        "@com_google_googletest//:gtest_main",
    ],
)
